--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,11 @@
 /* TODO Add site wide styles */
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    height: 100vh;
+}
