--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -5,3 +5,31 @@
 .hidden {
   display: none;
 }
+
+.current-user-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: 1px solid black;
+}
+
+.current-user-image-button {
+  border-radius: 100%;
+  border: none;
+}
+
+.current-user-image-button:hover {
+  cursor: pointer;
+}
+
+.upper-user-info {
+  display: flex;
+  align-items: center;
+  gap: 27px;
+  margin: 20px;
+}
+
+.display-user-name {
+  font-size: 20px;
+  font-weight: 600;
+}
