--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -4,8 +4,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body {
+    height: 100vh;
+}
+
+#root {
     height: 100vh;
 }
