--- a/react-app/src/components/LeftMatchesBar/LeftMatchesBar.css
+++ b/react-app/src/components/LeftMatchesBar/LeftMatchesBar.css
@@ -5,3 +5,34 @@
     height: 100%;
     border-right: 1px solid lightgrey;
 }
+
+.unmessaged-matches-wrapper {
+    width: 350px;
+    height: 110px;
+    overflow-x: scroll;
+}
+
+.inner-wrapper {
+    width: 500px;
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+    padding: 10px;
+}
+
+.mini-match-icons {
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+}
+
+.scroll-match-item {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.left-headers {
+    margin: 10px;
+}
