--- a/react-app/src/components/ConversationViewIndex/ConversationViewIndex.css
+++ b/react-app/src/components/ConversationViewIndex/ConversationViewIndex.css
@@ -10,3 +10,10 @@
     display: flex;
     justify-content: space-between;
 }
+
+.messages-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90%;
+}
