added delete button and it works but need to add thunk and action to update state

--- a/react-app/src/components/MatchMessages/MatchMessages.css
+++ b/react-app/src/components/MatchMessages/MatchMessages.css
@@ -63,3 +63,12 @@
 #chat-send-button:hover {
     cursor: pointer;
 }
+
+.message-item-container {
+    display: flex;
+}
+
+.fa-trash-can {
+    align-self: flex-end;
+    margin-right: 10px;
+}
