--- a/react-app/src/components/ConversationViewIndex/ConversationViewIndex.css
+++ b/react-app/src/components/ConversationViewIndex/ConversationViewIndex.css
@@ -14,6 +14,7 @@
 .messages-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
 }
