scheduled date shows up on message page

--- a/react-app/src/components/ConversationViewHeader/ConversationViewHeader.css
+++ b/react-app/src/components/ConversationViewHeader/ConversationViewHeader.css
@@ -15,3 +15,18 @@
     object-fit: cover;
     border-radius: 100%;
 }
+
+.scheduled-status {
+    display: flex;
+    width: 60%;
+    align-items: center;
+    gap: 10px;
+}
+
+.scheduled-status-text {
+    font-size: 12px;
+}
+
+.fa-calendar-days {
+    font-size: 20px;
+}
