--- a/react-app/src/components/ConversationViewHeader/ConversationViewHeader.css
+++ b/react-app/src/components/ConversationViewHeader/ConversationViewHeader.css
@@ -30,3 +30,17 @@
 .fa-calendar-days {
     font-size: 20px;
 }
+
+.fa-ellipsis-vertical:hover {
+    cursor: pointer;
+}
+
+.match-settings-dropdown {
+    position: absolute;
+    top: 70px;
+    right: 190px;
+    background-color: white;
+    border: 1px solid lightgrey;
+    list-style-type: none;
+    padding: 15px;
+}
