--- a/react-app/src/components/BrowseItem/BrowseItem.css
+++ b/react-app/src/components/BrowseItem/BrowseItem.css
@@ -1,10 +1,11 @@
 .browse-item-wrapper {
     display: flex;
-    background-color: #80F;
+
     justify-content: space-between;
-    margin: 50px;
-    height: 37rem;
+    margin: 20px 50px 50px 50px;
+    height: 30rem;
     border-radius: 23px;
+    padding-bottom: 20px;
 }
 
 .main-browse-picture {
@@ -23,14 +24,15 @@
     display: column;
     justify-content: center;
     align-items: center;
-    color: white;
     width: 50%;
     height: 100%;
+    background-color: rgb(240, 224, 255);
+    border-radius: 0 23px 23px 0;
 }
 
 .browse-item-right-side p {
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 600;
     vertical-align: center;
 }
@@ -41,4 +43,58 @@
 
 .no-browse-wrapper h3 {
     text-align: center;
+}
+
+.browse-item-outer-wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.swipe-button {
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+    background-color: white;
+    border: 1px solid rgb(193, 193, 193);
+}
+
+.swipe-button:hover {
+    cursor: pointer;
+}
+
+.swipe-yay:hover {
+    width: 75px;
+    height: 75px;
+    filter: drop-shadow(1px 3px 5px lightgrey)
+}
+
+.swipe-nay:hover {
+    width: 75px;
+    height: 75px;
+    filter: drop-shadow(1px 3px 5px lightgrey)
+}
+
+.swipe-button-container {
+    position: absolute;
+    bottom: 30px;
+    display: flex;
+    align-items: center;
+    height: 90px;
+    width: 190px;
+    justify-content: space-between;
+}
+
+.fa-solid {
+    font-size: 30px;
+}
+
+.fa-check {
+    color: #80F;
+}
+
+.fa-xmark {
+    color: grey;
 }
