--- a/react-app/src/components/ConversationList/ConversationList.css
+++ b/react-app/src/components/ConversationList/ConversationList.css
@@ -39,3 +39,8 @@
     background-color: rgb(242, 242, 242);
     cursor: pointer;
 }
+
+.message-content-preview {
+    font-size: 14px;
+    color: rgb(114, 114, 114);
+}
