--- a/react-app/src/components/BrowseItem/BrowseItem.css
+++ b/react-app/src/components/BrowseItem/BrowseItem.css
@@ -130,3 +130,38 @@
     justify-content: flex-start;
     gap: 10px;
 }
+
+.hidden-matched-box {
+    display: none;
+}
+
+.matched-box {
+    position: absolute;
+    background-color: rgba(136, 0, 255, 0.903);
+    color: white;
+    height: 600px;
+    left: 370px;
+    top: 20px;
+    right: 20px;
+    border-radius: 23px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.matched-box h2 {
+    font-size: 60px;
+}
+
+.overlap-pic {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 100%;
+}
+
+.matched-box p {
+    width: 50%;
+    text-align: center;
+}
