--- a/react-app/src/components/LeftMatchesBar/LeftMatchesBar.css
+++ b/react-app/src/components/LeftMatchesBar/LeftMatchesBar.css
@@ -8,7 +8,7 @@
 
 .unmessaged-matches-wrapper {
     width: 350px;
-    height: 80px;
+    height: 90px;
     overflow-x: scroll;
 }
 
@@ -35,6 +35,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 5px;
+}
+.scroll-match-item:hover {
+    background-color: rgba(211, 211, 211, 0.299);
+    border-radius: 10px;
 }
 
 .left-headers {
