--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -7,6 +7,8 @@
   left: 0px;
   width: 350px;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .hidden {
@@ -44,4 +46,29 @@
 
 .fa-angle-left:hover {
   cursor: pointer;
+}
+
+.fa-angle-left {
+  font-size: 15px;
+  color: grey;
+}
+
+.left-bar-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px;
+}
+
+.left-menu-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.left-menu-items li {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
