--- a/react-app/src/components/ConversationViewHeader/ConversationViewHeader.css
+++ b/react-app/src/components/ConversationViewHeader/ConversationViewHeader.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 15px;
+    position: relative;
 }
 
 
@@ -42,7 +43,7 @@
 .match-settings-dropdown {
     position: absolute;
     top: 70px;
-    right: 190px;
+    right: 10px;
     background-color: white;
     border: 1px solid lightgrey;
     list-style-type: none;
