--- a/react-app/src/components/ConversationViewIndex/ConversationViewIndex.css
+++ b/react-app/src/components/ConversationViewIndex/ConversationViewIndex.css
@@ -1,12 +1,12 @@
 .conversation-view-index-wrapper {
     display: flex;
     justify-content: space-between;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .conversation-view-right-side {
     width: 100%;
-    height: 100%;
+    /* height: 100vh; */
     display: flex;
     justify-content: space-between;
 }
@@ -16,5 +16,5 @@
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    height: 100%;
+    /* height: 100vh; */
 }
