--- a/react-app/src/components/LeftMatchesBar/LeftMatchesBar.css
+++ b/react-app/src/components/LeftMatchesBar/LeftMatchesBar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 350px;
-    height: 100%;
+    height: 100vh;
     border-right: 1px solid lightgrey;
 }
 
