pointer on trash can

--- a/react-app/src/components/MatchMessages/MatchMessages.css
+++ b/react-app/src/components/MatchMessages/MatchMessages.css
@@ -96,6 +96,10 @@
     margin-right: 10px;
 }
 
+.fa-trash-can:hover {
+    cursor: pointer;
+}
+
 .make-first-move {
     align-self: center;
     text-align: center;
