--- a/react-app/src/components/ConversationList/ConversationList.css
+++ b/react-app/src/components/ConversationList/ConversationList.css
@@ -1,10 +1,20 @@
 .conversations-list-wrapper {
+    overflow-y: scroll;
+}
+
+.inner-convo-list-wrapper {
     list-style-type: none;
+
 }
 
 .conversation-list-item {
     display: flex;
     align-items: center;
+    width: 100%;
+}
+
+.conversation-list-item-right {
+    width: 100%;
 }
 
 .conversation-list-item img {
@@ -20,6 +30,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 #your-move {
