--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -61,7 +61,7 @@
   width: 100%;
 }
 
-.left-menu-items {
+.left-menu-itemss {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -81,7 +81,7 @@
   height: 100%;
 }
 
-#left-menu-itemss li {
+.left-menu-itemss li {
   list-style-type: none;
   display: flex;
   justify-content: center;
@@ -92,4 +92,22 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+  margin-bottom: 40px;
+}
+
+.profile-dropdown-item {
+  text-decoration: none;
+  text-align: center;
+  color: darkgrey;
+  width: 80%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  border-radius: 23px;
+}
+
+.profile-dropdown-item:hover {
+  color: black;
+  cursor: pointer;
+  background-color: rgba(211, 211, 211, 0.173);
 }
