--- a/react-app/src/components/RightProfileBar/RightProfileBar.css
+++ b/react-app/src/components/RightProfileBar/RightProfileBar.css
@@ -42,11 +42,12 @@
 
 .right-profile-about {
     background-color: rgb(240, 224, 255);
-    height: 300px;
+    height: 100%;
     margin-top: none;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    padding: 25px;
 }
 
 .current-match-flake {
@@ -54,8 +55,19 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+    /* align-self: center; */
+    margin-bottom: 20px;
+}
+
+.right-about-header {
+    font-size: 14px;
+    margin-bottom: 20px;
 }
 
 .current-match-flake span {
     font-size: 30px;
+}
+
+.about-content {
+
 }
