--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -55,7 +55,7 @@
 
 .left-bar-top {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: 15px;
   width: 100%;
