--- a/react-app/src/components/ConversationViewHeader/ConversationViewHeader.css
+++ b/react-app/src/components/ConversationViewHeader/ConversationViewHeader.css
@@ -47,6 +47,28 @@
     background-color: white;
     border: 1px solid lightgrey;
     list-style-type: none;
-    padding: 15px;
+    padding: 15px 0;
     border-radius: 23px;
+}
+
+.match-dropdown-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+}
+
+.match-dropdown-inner button {
+    background-color: white;
+    border: none;
+    font-weight: 600;
+    width: 100%;
+    padding: 0 15px;
+    height: 30px;
+    text-align: left;
+}
+
+.match-dropdown-inner button:hover {
+    cursor: pointer;
+    background-color: rgba(211, 211, 211, 0.21);
 }
