--- a/react-app/src/components/ReportDateModal/ReportDateModal.css
+++ b/react-app/src/components/ReportDateModal/ReportDateModal.css
@@ -13,3 +13,27 @@
     gap: 15px;
     margin: 0 20px;
 }
+
+
+.report-date-modal-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.date-report-button {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    padding: 10px;
+    border-radius: 30px;
+    font-weight: 600;
+}
+
+.date-report-button:hover {
+    background-color: #80f;
+    color: white;
+    border: 2px solid #80f;
+    cursor: pointer;
+}
