--- a/react-app/src/components/ReportDateModal/ReportDateModal.css
+++ b/react-app/src/components/ReportDateModal/ReportDateModal.css
@@ -2,10 +2,6 @@
     display: none;
 }
 
-.active-date-report-button {
-    background-color: #80f;
-    color: white;
-}
 
 .date-report-button-container {
     display: flex;
@@ -22,6 +18,32 @@
     padding: 20px;
 }
 
+.report-date-modal-container h3 {
+    margin-bottom: 20px;
+}
+
+.report-date-modal-container p {
+    width: 70%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.report-date-modal-container form {
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.report-date-modal-container form button {
+
+}
+
+.date-report-bottom-buttons {
+    display: flex;
+    align-items: center;
+}
+
 .date-report-button {
     background-color: white;
     color: black;
@@ -36,4 +58,9 @@
     color: white;
     border: 2px solid #80f;
     cursor: pointer;
+}
+
+.active-date-report-button {
+    background-color: #80f;
+    color: white;
 }
