--- a/react-app/src/components/EditProfileIndex/EditProfileIndex.css
+++ b/react-app/src/components/EditProfileIndex/EditProfileIndex.css
@@ -7,16 +7,16 @@
 
 .edit-profile-main-content {
     display: flex;
+    position: relative;
 }
 
-.non-active-about {
-    display: none;
-}
 
 
 .right-edit-profile-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .edit-profile-images-wrapper {
@@ -89,4 +89,105 @@
     position: relative;
     background-color: white;
     border-radius: 20px;
+}
+
+.left-flake-score-container {
+    position: absolute;
+}
+
+.edit-profile-text-inputs {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+}
+
+
+.edit-profile-text-inputs h4 {
+    align-self: flex-start;
+    font-size: 20px;
+}
+
+.about-header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 20px;
+    border-radius: 23px;
+    align-items: center;
+}
+
+.about-header:hover {
+    background-color: rgba(206, 205, 205, 0.149);
+    cursor: pointer;
+}
+
+.about-me-edit-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me-edit-form > textarea {
+    margin: 0 20px 20px 20px;
+    height: 150px;
+    padding: 15px;
+    border-radius: 23px;
+    border: 1px solid lightgrey;
+}
+
+.about-me-edit-form > textarea:focus {
+    outline: 1px solid #80f;
+}
+
+.non-active-about {
+    display: none;
+}
+
+.actively-editing-about {
+    background-color: rgba(206, 205, 205, 0.149);
+    border-radius: 23px;
+}
+
+.about-edit-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px 40px 30px;
+    align-items: center;
+}
+
+.fa-angle-up, .fa-angle-down {
+    color: grey;
+    font-size: 23px;
+}
+
+.about-error {
+    margin: 20px;
+}
+
+.about-edit-cancel {
+    color: #80f;
+    font-weight: 600;
+}
+
+.about-edit-cancel:hover {
+    cursor: pointer;
+}
+
+.about-me-edit-form button {
+    background-color: #80f;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 30px;
+    font-weight: 600;
+    border:none;
+}
+
+#disabled-about-save {
+    background-color: grey;
+}
+
+.about-me-edit-form button:hover {
+    cursor: pointer;
 }
