--- a/react-app/src/components/ScheduleViewIndex/ScheduleViewIndex.css
+++ b/react-app/src/components/ScheduleViewIndex/ScheduleViewIndex.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    align-items: center;
 }
 
 .schedule-view-header {
@@ -17,4 +18,15 @@
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid lightgrey;
+}
+
+.dates-items-wrapper {
+    background-color: rgb(246, 246, 246);
+    padding: 20px;
+    border-radius: 23px;
+    margin: 15px;
+}
+
+.dates-items-wrapper h3 {
+    margin-bottom: 15px;
 }
