--- a/react-app/src/components/EditProfileIndex/EditProfileIndex.css
+++ b/react-app/src/components/EditProfileIndex/EditProfileIndex.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-top: 30px;
 }
 
 .edit-profile-images-wrapper {
