--- a/react-app/src/components/ScheduleViewIndex/ScheduleViewIndex.css
+++ b/react-app/src/components/ScheduleViewIndex/ScheduleViewIndex.css
@@ -30,3 +30,11 @@
 .dates-items-wrapper h3 {
     margin-bottom: 15px;
 }
+
+.dates-items-wrapper > div {
+    margin: 10px 0;
+    background-color: white;
+    border: 1px solid lightgrey;
+    border-radius: 30px;
+    padding: 10px;
+}
