--- a/react-app/src/components/PotentialMatchBrowse/PotentialMatchBrowse.css
+++ b/react-app/src/components/PotentialMatchBrowse/PotentialMatchBrowse.css
@@ -136,3 +136,11 @@
     color: #80f;
     font-size: 30px;
 }
+
+.main-spinner-holder {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
