--- a/react-app/src/components/RequestDateModal/RequestDateModal.css
+++ b/react-app/src/components/RequestDateModal/RequestDateModal.css
@@ -1,12 +1,65 @@
 .request-date-modal-container {
-    height: 100%;
+    height: 300px;
+    width: 500px;
     border-radius: 23px;
-    padding: 20px 100px;
+    padding: 40px;
     background-color: rgb(240, 224, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .request-date-modal-container h3 {
     font-weight: 600;
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
+}
+
+.request-date-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 60%;
+}
+
+.request-date-form label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.request-date-submit-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+    align-items: center;
+}
+
+.date-request-cancel {
+    color: #80f;
+    font-weight: 600;
+}
+.request-date-submit-buttons button {
+    background-color: #80f;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    height: 30px;
+    padding: 10px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+}
+
+.request-date-form input:focus {
+    outline: 1px solid #80f;
+}
+
+.request-date-submit-buttons *:hover {
+    cursor: pointer;
+}
+
+#disabled-request-date-button {
+    background-color: grey;
 }
