--- a/react-app/src/components/EditProfileIndex/EditProfileIndex.css
+++ b/react-app/src/components/EditProfileIndex/EditProfileIndex.css
@@ -8,6 +8,9 @@
 .edit-profile-main-content {
     display: flex;
     position: relative;
+    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
 }
 
 
