--- a/react-app/src/components/MatchesCarousel/MatchesCarousel.css
+++ b/react-app/src/components/MatchesCarousel/MatchesCarousel.css
@@ -19,6 +19,9 @@
     border-radius: 100%;
     border: none;
     position: absolute;
+    background-color: white;
+    filter: drop-shadow(1px 3px 5px lightgrey);
+    color: grey;
 }
 
 .carousel-buttons:hover {
@@ -44,7 +47,7 @@
     align-items: center;
     width: 100%;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 15px;
     margin-left: 10px;
 }
 
