fixed the margins on the matched box

--- a/react-app/src/components/BrowseItem/BrowseItem.css
+++ b/react-app/src/components/BrowseItem/BrowseItem.css
@@ -142,7 +142,7 @@
     color: white;
     height: 600px;
     right: 20px;
-    width: 100%;
+    /* width: 90%; */
     left: 20px;
     top: 20px;
     right: 20px;
