--- a/react-app/src/components/ReportGhostModal/ReportGhostModal.css
+++ b/react-app/src/components/ReportGhostModal/ReportGhostModal.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    background-color: rgb(240, 224, 255);
+    border-radius: 23px;
 }
 
 .report-ghost-modal > p {
