--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -15,6 +15,7 @@
 .signup-form-container label {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .signup-wrapper {
@@ -36,6 +37,7 @@
     border: 1px solid lightgrey;
     padding: 0 10px;
     color: grey;
+    position: relative;
 }
 .signup-form-container select {
     border-radius: 30px;
@@ -60,7 +62,7 @@
 .enter-info-text {
     font-size: 25px;
     font-weight: 600;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 
 .signup-form-left {
@@ -107,4 +109,13 @@
 
 h1 {
     color: #80f;
+}
+
+.dob-label {
+    position: absolute;
+    z-index: 1;
+    right: 35px;
+    top: 10px;
+    color: grey;
+    font-size: 14px;
 }
