--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -148,7 +148,7 @@ h1 {
     align-items: center;
     padding: 15px;
     z-index: 1;
-    border: 1px solid lightgrey;
+    border: 1px solid #80f;
     border-radius: 23px;
 }
 
@@ -168,4 +168,62 @@ h1 {
 .fa-caret-down, .fa-caret-up {
     font-size: 12px;
     color: lightgrey;
+}
+
+.looking-settings-dropdown {
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    right: 0px;
+    top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    z-index: 1;
+    border: 1px solid #80f;
+    border-radius: 23px;
+}
+
+.looking-settings-dropdown li {
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.looking-settings-dropdown li:hover {
+    background-color: rgba(211, 211, 211, 0.244);
+    cursor: pointer;
+}
+
+.state-settings-dropdown {
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    right: 0px;
+    top: 210px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    z-index: 1;
+    border: 1px solid #80f;
+    border-radius: 23px;
+    overflow-y: scroll;
+    height: 200px;
+}
+
+.state-settings-dropdown li {
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.state-settings-dropdown li:hover {
+    background-color: rgba(211, 211, 211, 0.244);
+    cursor: pointer;
 }
