--- a/react-app/src/components/EditProfileIndex/EditProfileIndex.css
+++ b/react-app/src/components/EditProfileIndex/EditProfileIndex.css
@@ -82,6 +82,7 @@
     padding: 10px;
     border: 1px solid lightgrey;
     border-radius: 20px;
+    object-fit: cover;
 }
 
 .image-boxes-bottom {
