fixed match popup

--- a/react-app/src/components/BrowseItem/BrowseItem.css
+++ b/react-app/src/components/BrowseItem/BrowseItem.css
@@ -140,7 +140,7 @@
     position: absolute;
     background-color: rgba(136, 0, 255, 0.903);
     color: white;
-    height: 600px;
+    height: 90%;
     right: 20px;
     /* width: 90%; */
     left: 20px;
