implemented spinner for messages

--- a/react-app/src/components/MatchMessages/MatchMessages.css
+++ b/react-app/src/components/MatchMessages/MatchMessages.css
@@ -118,3 +118,11 @@
 .fa-paper-plane {
     font-size: 20px;
 }
+
+.message-spinner-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
