--- a/react-app/src/components/MatchMessages/MatchMessages.css
+++ b/react-app/src/components/MatchMessages/MatchMessages.css
@@ -66,7 +66,7 @@
 
 #chat-input {
     border: none;
-    width: 100%;
+    width: 90%;
     border-radius: 30px;
     height: 45px;
     padding: 10px;
@@ -78,10 +78,11 @@
 
 
 #chat-send-button {
-    margin-right: 10px;
+    margin-right: 5px;
+    margin-top: 2px;
     border-radius: 100%;
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     border: none;
     background-color: lightgrey;
     color: white;
