--- a/react-app/src/global.module.sass
+++ b/react-app/src/global.module.sass
@@ -27,9 +27,13 @@
     &:hover
         background-color: $purple2
 
+.login_subtext
+    text-align: center
+
 .login_wrapper
     display: flex
     flex-direction: column
     align-items: center
     justify-content: center
     height: 100%
+    margin: 0 20px
