refactored signup page for sass

--- a/react-app/src/helpers.sass
+++ b/react-app/src/helpers.sass
@@ -40,4 +40,6 @@ $error: red
 $black: black
 $gray: rgb(119, 117, 117)
 $gray2: rgb(59, 59, 59)
+$gray3: grey
 $lightgray: lightgrey
+$lightergray: rgba(211, 211, 211, 0.244)
