sass and header refactoring potential match browse

--- a/react-app/src/components/SplashIndex/SplashIndex.module.sass
+++ b/react-app/src/components/SplashIndex/SplashIndex.module.sass
@@ -39,7 +39,7 @@
     &:hover
         background-color: $purple2
 
-.login_button
+.button
     padding: 10px
     border-radius: 3px
     background-color: $purple
@@ -50,7 +50,7 @@
     width: 100%
     font-weight: 600
 
-.login_buttons
+.buttons
     display: flex
     gap: 15px
     width: 300px
