--- a/react-app/src/global.module.sass
+++ b/react-app/src/global.module.sass
@@ -1,6 +1,6 @@
 @import ./helpers
 
-.login_button
+.button
     padding: 10px 20px
     border-radius: 30px
     margin: 10px
@@ -20,7 +20,7 @@
     & h1
         color: $purple
 
-.login_submit
+.purple_button
     background-color: $purple
     color: $white
     border: none
