--- a/react-app/src/helpers.sass
+++ b/react-app/src/helpers.sass
@@ -35,11 +35,14 @@
 
 $purple: #80F
 $purple2: rgb(124, 0, 232)
+$purpletransparent: rgba(136, 0, 255, 0.903)
+$lightpurple: rgb(240, 224, 255)
 $white: white
 $error: red
 $black: black
 $gray: rgb(119, 117, 117)
 $gray2: rgb(59, 59, 59)
 $gray3: grey
+$gray4: rgb(71, 71, 71)
 $lightgray: lightgrey
 $lightergray: rgba(211, 211, 211, 0.244)
