refactored leftmatchesbar for sass

--- a/react-app/src/helpers.sass
+++ b/react-app/src/helpers.sass
@@ -37,6 +37,7 @@ $purple: #80F
 $purple2: rgb(124, 0, 232)
 $purpletransparent: rgba(136, 0, 255, 0.903)
 $lightpurple: rgb(240, 224, 255)
+$lightpurple2: rgb(227, 210, 243)
 $white: white
 $error: red
 $black: black
