--- a/react-app/src/components/MatchesCarousel/MatchesCarousel.css
+++ b/react-app/src/components/MatchesCarousel/MatchesCarousel.css
@@ -61,13 +61,33 @@
     right: 10px;
 }
 
-/* .scroll-match-item {
-    width: 40px;
-    height: 40px;
-    object-fit: cover;
-    border-radius: 100%;
-} */
 
 #last-match-group {
     justify-self: flex-start;
+}
+
+.mini-match-icons {
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+    object-fit: cover;
+}
+
+
+.mini-match-icons:hover {
+    cursor: pointer;
+}
+
+
+
+.scroll-match-item {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+}
+.scroll-match-item:hover {
+    background-color: rgba(211, 211, 211, 0.299);
+    border-radius: 10px;
 }
