--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -15,6 +15,10 @@ button {
     cursor: pointer;
 }
 
+.fa-angle-right {
+    font-size: 18px;
+}
+
 .fa-check, .fa-snowflake {
     color: #80F;
 }
