refactoring left bar to sass

--- a/react-app/src/helpers.sass
+++ b/react-app/src/helpers.sass
@@ -45,5 +45,6 @@ $gray: rgb(119, 117, 117)
 $gray2: rgb(59, 59, 59)
 $gray3: grey
 $gray4: rgb(71, 71, 71)
+$gray5: darkgrey
 $lightgray: lightgrey
 $lightergray: rgba(211, 211, 211, 0.244)
