refactored matches carousel to sass

--- a/react-app/src/helpers.sass
+++ b/react-app/src/helpers.sass
@@ -48,3 +48,4 @@ $gray4: rgb(71, 71, 71)
 $gray5: darkgrey
 $lightgray: lightgrey
 $lightergray: rgba(211, 211, 211, 0.244)
+$lightergray2: rgb(230, 230, 230)
