main index responsive down to 1024

--- a/react-app/src/components/ConversationList/ConversationList.module.sass
+++ b/react-app/src/components/ConversationList/ConversationList.module.sass
@@ -27,6 +27,8 @@
     object-fit: cover
     cursor: pointer
     margin: 15px
+    +d
+        margin: 15px 10px
 
 .inner_wrapper
     list-style-type: none
