--- a/react-app/src/components/MatchesCarousel/MatchesCarousel.module.sass
+++ b/react-app/src/components/MatchesCarousel/MatchesCarousel.module.sass
@@ -18,7 +18,11 @@
 .caret
     font-size: 12px !important
 
-.full_group
+.empty
+    list-style-type: none
+    padding: 5px
+
+.group
     display: flex
     align-items: center
     width: 100%
@@ -59,7 +63,7 @@
     right: 10px
 
 .wrapper
-    width: 350px
+    width: 100%
     position: relative
     height: 90px
     display: flex
