--- a/react-app/src/components/Navigation/Navigation.module.sass
+++ b/react-app/src/components/Navigation/Navigation.module.sass
@@ -19,6 +19,7 @@
   align-items: center
   gap: 27px
   margin: 20px
+  width: 100%
 
 .dropdown
   background-color: $white
@@ -32,6 +33,8 @@
   border-right: 1px solid $lightgray
   height: 100%
   z-index: 1
+  +d
+    width: 300px
 
 .dropdown_item
   text-decoration: none
