--- a/react-app/src/components/Navigation/Navigation.module.sass
+++ b/react-app/src/components/Navigation/Navigation.module.sass
@@ -20,6 +20,9 @@
   gap: 27px
   margin: 20px
   width: 100%
+  +t
+    justify-content: center
+    margin: 20px 0 0 0 
 
 .dropdown
   background-color: $white
@@ -32,7 +35,7 @@
   align-items: center
   border-right: 1px solid $lightgray
   height: 100%
-  z-index: 1
+  z-index: 2
   +d
     width: 300px
 
@@ -71,6 +74,9 @@
   gap: 10px
   margin-right: 20px
   cursor: pointer
+  +t
+    flex-direction: column
+    margin-right: 0
 
 .top
   display: flex
