fixed side bar on empty

--- a/react-app/src/components/LeftMatchesBar/LeftMatchesBar.module.sass
+++ b/react-app/src/components/LeftMatchesBar/LeftMatchesBar.module.sass
@@ -30,6 +30,15 @@
 .labels
     margin: 10px
 
+.no_conversations
+    text-align: center
+    width: 350px
+    padding: 10px
+    +d
+        width: 300px
+    +t
+        width: 75px
+
 .rectangle
     width: 15px
     height: 20px
