--- a/react-app/src/components/MatchesCarousel/MatchesCarousel.module.sass
+++ b/react-app/src/components/MatchesCarousel/MatchesCarousel.module.sass
@@ -48,6 +48,15 @@
         background-color: $lightergray
         border-radius: 10px
 
+.no_matches
+    text-align: center
+    width: 350px
+    padding: 10px
+    +d
+        width: 300px
+    +t
+        width: 75px
+
 .partial_group
     display: flex
     align-items: center
