convo list side bar for smaller

--- a/react-app/src/components/MatchMessages/MatchMessages.css
+++ b/react-app/src/components/MatchMessages/MatchMessages.css
@@ -88,6 +88,10 @@
     color: white;
 }
 
+#chat-send-button i {
+    font-size: 20px !important;
+}
+
 #chat-send-button:hover {
     cursor: pointer;
 }
